# SPDX-License-Identifier: CC0-1.0
# SPDX-FileCopyrightText: Sven Eckelmann <sven@narfation.org>

[metadata]
name = qcom-nandc-pagify
author = Sven Eckelmann
author_email = sven@narfation.org
description = Raw Image to Qualcomm NAND controller image converter
license = MIT
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ecsv/qcom-nandc-pagify
project_urls =
    Bug Tracker = https://github.com/ecsv/qcom-nandc-pagify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.5
install_requires =
    bchlib
    reedsolo >= 1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    qcom-nandc-pagify = qcom_nandc_pagify._main:main
